--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@oruga-ui/oruga-next": "^0.5.5",
     "@vueuse/head": "^0.7.9",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@yupio/contract-addresses": "^1.0.15",
     "add": "^2.0.6",
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^3.0.0",
@@ -33,7 +34,9 @@
     "https-browserify": "^1.0.0",
     "pinia": "^2.0.18",
     "rollup-plugin-polyfill-node": "^0.10.2",
+    "snarkdown": "^2.0.0",
     "stream-browserify": "^3.0.0",
+    "text-clipper": "^2.2.0",
     "util": "^0.12.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
