--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src&&prettier .  -w -u",
-    "build": "vue-tsc --noEmit && vite build",
-    "build-ssg": "vue-tsc --noEmit --project tsconfig.json && vite-ssg build",
+    "build-no-ssg": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit --project tsconfig.json && vite-ssg build",
     "preview": "vite preview"
   },
   "husky": {
