--- a/apps/yup-live-mobile/android/app/capacitor.build.gradle
+++ b/apps/yup-live-mobile/android/app/capacitor.build.gradle
@@ -12,8 +12,10 @@ dependencies {
     implementation project(':capacitor-app')
     implementation project(':capacitor-haptics')
     implementation project(':capacitor-keyboard')
+    implementation project(':capacitor-share')
     implementation project(':capacitor-splash-screen')
     implementation project(':capacitor-status-bar')
+    implementation project(':send-intent')
 
 }
 
