--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src&&prettier . -w -u",
     "build-no-ssg": "vue-tsc --noEmit && vite build",
     "build": "vue-tsc --noEmit --project tsconfig.json && vite-ssg build",
+    "upgrade": "yarn-upgrade-all",
     "preview": "vite preview"
   },
   "husky": {
@@ -23,6 +24,8 @@
     "@oruga-ui/oruga-next": "^0.5.8",
     "@vueuse/head": "^0.9.8",
     "@yupio/contract-addresses": "^1.0.15",
+    "add": "^2.0.6",
+    "buffer": "^6.0.3",
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.6",
@@ -30,8 +33,10 @@
     "gini": "^1.1.7",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
+    "icons": "*",
+    "node-stdlib-browser": "^1.2.0",
     "pinia": "^2.0.23",
-    "rollup-plugin-polyfill-node": "^0.11.0",
+    "shared": "*",
     "snarkdown": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "text-clipper": "^2.2.0",
@@ -39,12 +44,11 @@
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
     "vue-screen": "^2.1.0-beta.1",
-    "web3modal": "^1.9.9",
-    "yarn": "^1.22.19",
-    "shared": "*",
-    "icons": "*"
+    "web3modal": "^1.9.10",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@ljharb/eslint-config": "^21.0.0",
     "@types/d3": "^7.4.0",
     "@types/node": "^18.11.9",
@@ -73,6 +77,7 @@
     "typescript": "^4.8.4",
     "vite": "^3.2.2",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node-stdlib-browser": "^0.1.1",
     "vite-plugin-windicss": "^1.8.8",
     "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
