--- a/apps/yup-live-mobile/tsconfig.json
+++ b/apps/yup-live-mobile/tsconfig.json
@@ -33,6 +33,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
+    "../../packages/shared/src/**/*.vue",
     "../../packages/icons/src/**/*.vue",
     "../../packages/components/**/*.vue"
   ],
