--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -26,6 +26,7 @@
     "@yupio/contract-addresses": "^1.0.15",
     "add": "^2.0.6",
     "buffer": "^6.0.3",
+    "canonicalize": "^1.0.8",
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.6",
