--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src&&prettier . -w -u",
-    "build-no-ssg": "vue-tsc --noEmit && vite build",
-    "build": "vue-tsc --noEmit --project tsconfig.json && vite-ssg build",
+    "build-no-ssg": "vite build",
+    "build": "vite-ssg build",
     "upgrade": "yarn-upgrade-all",
     "preview": "vite preview"
   },
@@ -22,16 +22,15 @@
   },
   "dependencies": {
     "@oruga-ui/oruga-next": "^0.5.8",
-    "@vueuse/head": "^0.9.8",
+    "@vueuse/head": "^1.0.26",
     "@yupio/contract-addresses": "^1.0.15",
-    "add": "^2.0.6",
     "buffer": "^6.0.3",
     "canonicalize": "^1.0.8",
+    "components": "*",
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
-    "gini": "^1.1.7",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
     "icons": "*",
@@ -44,13 +43,12 @@
     "util": "^0.12.5",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
-    "vue-screen": "^2.1.0-beta.1",
     "web3modal": "^1.9.10",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@ljharb/eslint-config": "^21.0.0",
+    "@ljharb/eslint-config": "^21.0.1",
     "@types/d3": "^7.4.0",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
@@ -58,7 +56,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.26.0",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-developit": "^1.2.0",
     "eslint-config-mourner": "^3.0.0",
@@ -71,20 +69,19 @@
     "eslint-plugin-vue": "^9.7.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "sass": "^1.56.0",
+    "sass": "^1.58.2",
     "stylelint": "^14.14.1",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
+    "vite": "^4.1.2",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-node-stdlib-browser": "^0.1.1",
     "vite-plugin-windicss": "^1.8.8",
     "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
-    "vue-tsc": "^1.0.9",
     "windicss": "^3.5.6",
-    "yarn-upgrade-all": "^0.7.1"
+    "yarn-upgrade-all": "^0.7.2"
   },
   "removedDeps": {
     "@web3auth/base": "^1.1.4",
