--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -53,7 +53,6 @@
     "clean": true
   },
   "scripts": {
-    "build": "tsup",
     "watch": "tsup --watch",
     "clean": "rm -rf dist",
     "lint": "TIMING=1 eslint \"src/**/*.ts*\"",
@@ -64,12 +63,7 @@
   },
   "devDependencies": {
     "tsup": "^6.2.3",
-    "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "@walletconnect/web3-provider": "^1.8.0",
-    "dayjs": "^1.11.6",
-    "ethers": "^5.7.2",
-    "vue": "^3.2.45"
+    "typescript": "^4.8.3",
+    "@walletconnect/web3-provider": "^1.8.0"
   }
 }
