--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -2,41 +2,38 @@
   "name": "yup-live-mobile",
   "version": "0.0.1",
   "private": true,
-  "description": "An Ionic project",
+  "description": "Ionic Vue Yup Live Mobile",
   "scripts": {
-    "serve": "vue-cli-service serve --port=4875 --https --host=0.0.0.0",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src&&prettier . -w -u",
+    "build": "vue-tsc --noEmit && vite build",
     "android": "ionic cap run android -l --external --host=4875.flashsoft.eu --port=4875 --livereload-url=https://4875.flashsoft.eu",
-    "android-build": "ionic capacitor build android",
+    "android-build": "yarn build && ionic capacitor sync android --prod --no-build",
+    "android-open": "ionic capacitor open android",
     "android-res": "cordova-res android --skip-config --copy",
     "upgrade": "yarn-upgrade-all"
   },
   "dependencies": {
-    "@capacitor/android": "4.4.0",
-    "@capacitor/app": "4.1.0",
-    "@capacitor/core": "4.4.0",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/share": "^4.1.0",
+    "@capacitor/android": "^4.6.3",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/core": "^4.6.3",
+    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/keyboard": "^4.1.1",
+    "@capacitor/share": "^4.1.1",
     "@capacitor/splash-screen": "^4.1.2",
-    "@capacitor/status-bar": "4.0.1",
+    "@capacitor/status-bar": "^4.1.1",
     "@ionic/storage": "^3.0.6",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
-    "assert": "^2.0.0",
-    "core-js": "^3.6.5",
+    "@ionic/vue": "^6.5.5",
+    "@ionic/vue-router": "^6.5.5",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "icons": "*",
-    "ionicons": "^6.0.3",
-    "node-polyfill-webpack-plugin": "^2.0.1",
-    "pina": "^0.20.2204228",
+    "ionicons": "^6.1.3",
+    "pinia": "^2.0.23",
     "send-intent": "^3.0.12",
     "shared": "*",
-    "vue": "^3.2.21",
-    "vue-router": "^4.0.12",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6",
     "web3modal": "^1.9.10"
   },
   "devDependencies": {
@@ -44,25 +41,21 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-plugin-router": "~5.0.0-rc.1",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
+    "@vitejs/plugin-vue": "^3.2.0",
     "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "@vue/vue3-jest": "^27.0.0-alpha.3",
-    "babel-jest": "^27.3.1",
     "cypress": "^8.7.0",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
     "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5",
-    "vue-cli-plugin-windicss": "~1.1.6"
+    "typescript": "^4.8.4",
+    "vite": "^4.1.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node-stdlib-browser": "^0.1.1",
+    "vite-plugin-windicss": "^1.8.8",
+    "vue-tsc": "^1.1.5"
+  },
+  "browser": {
+    "stream": false
   }
 }
