--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -11,8 +11,9 @@
     "sourceMap": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom", ],
     "skipLibCheck": true,
+    "types": ["vite/client"],
     "outDir": "./dist",
     "baseUrl": ".",
   },
