changes: at `https://yup-live.pages.dev/change-log`

--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -22,6 +22,7 @@
     "@capacitor/share": "^4.1.1",
     "@capacitor/splash-screen": "^4.1.2",
     "@capacitor/status-bar": "^4.1.1",
+    "@ethersproject/abstract-signer": "^5.7.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/vue": "^6.5.5",
     "@ionic/vue-router": "^6.5.5",
@@ -29,6 +30,7 @@
     "ethers": "^5.7.2",
     "icons": "*",
     "ionicons": "^6.1.3",
+    "omit-deep": "^0.3.0",
     "pinia": "^2.0.23",
     "send-intent": "^3.0.12",
     "shared": "*",
