--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -21,6 +21,7 @@
     "*": "prettier -w -u"
   },
   "dependencies": {
+    "@ethersproject/abstract-signer": "^5.7.0",
     "@oruga-ui/oruga-next": "^0.5.8",
     "@vueuse/head": "^0.9.0",
     "@yupio/contract-addresses": "^1.0.15",
@@ -35,6 +36,7 @@
     "https-browserify": "^1.0.0",
     "icons": "*",
     "node-stdlib-browser": "^1.2.0",
+    "omit-deep": "^0.3.0",
     "pinia": "^2.0.23",
     "shared": "*",
     "stream-browserify": "^3.0.0",
