--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -14,48 +14,50 @@
     "upgrade": "yarn-upgrade-all"
   },
   "dependencies": {
-    "@capacitor/android": "^4.6.3",
+    "@capacitor/android": "^4.7.1",
     "@capacitor/app": "^4.1.1",
-    "@capacitor/core": "^4.6.3",
-    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/core": "^4.7.1",
+    "@capacitor/haptics": "^4.1.0",
     "@capacitor/keyboard": "^4.1.1",
     "@capacitor/share": "^4.1.1",
-    "@capacitor/splash-screen": "^4.1.2",
+    "@capacitor/splash-screen": "^4.2.0",
     "@capacitor/status-bar": "^4.1.1",
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ionic/storage": "^3.0.6",
-    "@ionic/vue": "^6.5.5",
-    "@ionic/vue-router": "^6.5.5",
+    "@ionic/vue": "^6.6.2",
+    "@ionic/vue-router": "^6.6.2",
     "buffer": "^6.0.3",
+    "components": "*",
     "ethers": "^5.7.2",
     "icons": "*",
-    "ionicons": "^6.1.3",
+    "ionicons": "^7.0.0",
     "omit-deep": "^0.3.0",
-    "pinia": "^2.0.23",
+    "pinia": "^2.0.33",
     "send-intent": "^3.0.12",
     "shared": "*",
-    "vue": "^3.2.41",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "web3modal": "^1.9.10"
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
-    "@capacitor/cli": "4.4.0",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@capacitor/cli": "^4.7.1",
+    "@types/jest": "^29.5.0",
+    "@types/omit-deep": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vue/cli-service": "^5.0.8",
-    "cypress": "^8.7.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^27.3.1",
-    "sass": "^1.56.1",
-    "typescript": "^4.8.4",
-    "vite": "^4.1.4",
+    "cypress": "^12.8.1",
+    "eslint": "^8.36.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "jest": "^29.5.0",
+    "sass": "^1.59.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-node-stdlib-browser": "^0.1.1",
-    "vite-plugin-windicss": "^1.8.8",
-    "vue-tsc": "^1.1.5"
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
+    "vite-plugin-windicss": "^1.8.10",
+    "vue-tsc": "^1.2.0"
   },
   "browser": {
     "stream": false
