--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -24,17 +24,18 @@
     "@capacitor/status-bar": "^4.1.1",
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ionic/storage": "^3.0.6",
-    "@ionic/vue": "^6.6.2",
-    "@ionic/vue-router": "^6.6.2",
+    "@ionic/vue": "^7.0.0",
+    "@ionic/vue-router": "^7.0.0",
     "buffer": "^6.0.3",
     "components": "*",
     "ethers": "^5.7.2",
     "icons": "*",
-    "ionicons": "^7.0.0",
+    "ionicons": "^7.1.0",
     "omit-deep": "^0.3.0",
     "pinia": "^2.0.33",
     "send-intent": "^3.0.12",
     "shared": "*",
+    "turbo": "^1.8.8",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "web3modal": "^1.9.12"
@@ -43,15 +44,15 @@
     "@capacitor/cli": "^4.7.1",
     "@types/jest": "^29.5.0",
     "@types/omit-deep": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/cli-service": "^5.0.8",
-    "cypress": "^12.8.1",
-    "eslint": "^8.36.0",
-    "eslint-plugin-vue": "^9.9.0",
+    "cypress": "^12.9.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.10.0",
     "jest": "^29.5.0",
-    "sass": "^1.59.3",
+    "sass": "^1.60.0",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
