changes on change-log page

--- a/apps/yup-live-mobile/tsconfig.json
+++ b/apps/yup-live-mobile/tsconfig.json
@@ -20,6 +20,9 @@
     "lib": [
       "esnext",
       "dom",
+    ],
+    "types": [
+      "vite/client"
     ]
   },
   "include": [
@@ -33,5 +36,6 @@
   "exclude": [
     "node_modules",
     "dist"
-  ]
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
