--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -12,6 +12,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "types": ["vite/client"],
     "skipLibCheck": true,
     "outDir": "./dist",
     "baseUrl": ".",
