changes on changelog page

--- a/.github/workflows/create-tauri-update-json.yml
+++ b/.github/workflows/create-tauri-update-json.yml
@@ -6,7 +6,7 @@ on:
       release_tag:
         description: 'Tag name of the release'
         required: true
-        default: main
+        default: main-desktop
 
 jobs:
   get-assets:
