--- a/.github/workflows/on-demand-cross-build-tauri.yml
+++ b/.github/workflows/on-demand-cross-build-tauri.yml
@@ -14,7 +14,8 @@ jobs:
       contents: write
     runs-on: ubuntu-20.04
     outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
+      tag_name: ${{ steps.create-release.outputs.result.tag }}
+      release_id: ${{ steps.create-release.outputs.result.id }}
 
     steps:
       - uses: actions/checkout@v3
@@ -38,7 +39,10 @@ jobs:
               draft: true,
               prerelease: false
             })
-            return data.id
+            return {
+                tag: `app-v${process.env.PACKAGE_VERSION}`,
+                id: data.id
+              }
 
   build-tauri:
     needs: create-release
@@ -88,7 +92,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: ${{ github.ref_name }} # This only works if your workflow triggers on new tags.
+          tagName: ${{ needs.create-release.outputs.tag_name }}
           releaseName: 'YUP Live Desktop v__VERSION__' # tauri-action replaces \_\_VERSION\_\_ with the app version.
           releaseBody: 'See the assets to download and install this version.'
           includeRelease: true
