--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,7 +15,9 @@
     "preset": "jest-presets/jest/node"
   },
   "dependencies": {
-    "marked": "^4.2.12"
+    "marked": "^4.2.12",
+    "components": "*",
+    "icons": "*"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8"
