--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -11,44 +11,47 @@
     "android-build": "yarn build && ionic capacitor sync android --prod --no-build",
     "android-open": "ionic capacitor open android",
     "android-res": "cordova-res android --skip-config --copy",
+    "android-res-new": "npx capacitor-assets generate --android",
     "upgrade": "yarn-upgrade-all"
   },
   "dependencies": {
-    "@capacitor/android": "^4.7.1",
-    "@capacitor/app": "^4.1.1",
-    "@capacitor/core": "^4.7.1",
-    "@capacitor/haptics": "^4.1.0",
-    "@capacitor/keyboard": "^4.1.1",
-    "@capacitor/share": "^4.1.1",
-    "@capacitor/splash-screen": "^4.2.0",
-    "@capacitor/status-bar": "^4.1.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/share": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ethersproject/abstract-signer": "^5.7.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
-    "buffer": "^6.0.3",
+    "@wagmi/core": "^1.3.8",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/html": "^2.7.0",
     "components": "*",
     "ethers": "^5.7.2",
     "icons": "*",
     "ionicons": "^7.1.0",
     "omit-deep": "^0.3.0",
     "pinia": "^2.0.33",
-    "send-intent": "^3.0.12",
+    "send-intent": "^5.0.0",
     "shared": "*",
-    "turbo": "^1.8.8",
+    "turbo": "^1.8.0",
     "vue": "^3.2.47",
     "vue-cup-avatar": "^0.1.9",
-    "vue-router": "^4.1.6",
-    "web3modal": "^1.9.12"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@capacitor/cli": "^4.7.1",
+    "@capacitor/assets": "^2.0.4",
+    "@capacitor/cli": "^5.0.0",
     "@types/jest": "^29.5.0",
     "@types/omit-deep": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/cli-service": "^5.0.8",
     "cypress": "^12.9.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.10.0",
@@ -56,12 +59,14 @@
     "sass": "^1.60.0",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-node-stdlib-browser": "^0.2.1",
-    "vite-plugin-windicss": "^1.8.10",
     "vue-tsc": "^1.2.0"
   },
   "browser": {
     "stream": false
+  },
+  "disabedDeps": {
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
+    "vite-plugin-windicss": "^1.8.10"
   }
 }
