--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -25,30 +25,27 @@
     "@noble/hashes": "^1.3.0",
     "@oruga-ui/oruga-next": "^0.5.8",
     "@vueuse/head": "^0.9.0",
+    "@wagmi/core": "^1.3.8",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/html": "^2.7.0",
     "@yupio/contract-addresses": "^1.0.15",
-    "buffer": "^6.0.3",
     "canonicalize": "^1.0.8",
     "components": "*",
     "d3": "^7.6.1",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
-    "http-browserify": "^1.7.0",
-    "https-browserify": "^1.0.0",
     "icons": "*",
     "long": "^5.2.3",
-    "node-stdlib-browser": "^1.2.0",
     "omit-deep": "^0.3.0",
     "pinia": "^2.0.23",
     "qrcode.vue": "^3.4.0",
     "shared": "*",
-    "stream-browserify": "^3.0.0",
     "text-clipper": "^2.2.0",
     "util": "^0.12.5",
     "vue": "^3.2.41",
     "vue-cup-avatar": "^0.1.9",
     "vue-router": "^4.1.6",
-    "web3modal": "^1.9.10",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
