--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -62,8 +62,13 @@
     "preset": "jest-presets/jest/node"
   },
   "devDependencies": {
+    "@walletconnect/web3-provider": "^1.8.0",
     "tsup": "^6.2.3",
-    "typescript": "^4.8.3",
-    "@walletconnect/web3-provider": "^1.8.0"
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@wagmi/core": "^1.3.8",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/html": "^2.7.0"
   }
 }
