--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -26,8 +26,8 @@
     "@oruga-ui/oruga-next": "^0.5.8",
     "@vueuse/head": "^0.9.0",
     "@wagmi/core": "^1.3.8",
-    "@web3modal/ethereum": "^2.7.0",
-    "@web3modal/html": "^2.7.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/html": "^2.7.1",
     "@yupio/contract-addresses": "^1.0.15",
     "canonicalize": "^1.0.8",
     "components": "*",
@@ -55,6 +55,7 @@
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
