--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -11,18 +11,19 @@
     "android-build": "yarn build && ionic capacitor sync android --prod --no-build",
     "android-open": "ionic capacitor open android",
     "android-res": "cordova-res android --skip-config --copy",
-    "android-ver": "ts-node --esm ./scripts/update-version.ts",
-    "android-pub" : "ts-node --esm ./scripts/publish-preview.ts",
+    "android-ver": "deno run -A ./scripts/update-version.ts",
+    "android-pub": "deno run -A ./scripts/publish-preview.ts",
     "android-res-new": "npx capacitor-assets generate --android",
     "upgrade": "yarn-upgrade-all"
   },
   "dependencies": {
+    "@capacitor-firebase/messaging": "^5.1.0",
     "@capacitor/android": "^5.0.0",
     "@capacitor/app": "^5.0.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
     "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/share": "^5.0.0",
     "@capacitor/splash-screen": "^5.0.0",
     "@capacitor/status-bar": "^5.0.0",
@@ -35,6 +36,7 @@
     "@web3modal/html": "^2.7.0",
     "components": "*",
     "ethers": "^5.7.2",
+    "firebase": "^10.1.0",
     "icons": "*",
     "ionicons": "^7.1.0",
     "omit-deep": "^0.3.0",
@@ -53,6 +55,7 @@
     "@types/omit-deep": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "cypress": "^12.9.0",
     "eslint": "^8.37.0",
