--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -38,10 +38,12 @@
     "firebase": "^10.1.0",
     "icons": "*",
     "ionicons": "^7.1.0",
+    "node-stdlib-browser": "^1.2.0",
     "omit-deep": "^0.3.0",
     "pinia": "^2.0.33",
     "send-intent": "^5.0.0",
     "shared": "*",
+    "threads-api": "^1.6.3",
     "turbo": "^1.8.0",
     "vue": "^3.2.47",
     "vue-cup-avatar": "^0.1.9",
