--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -31,20 +31,17 @@
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "@wagmi/core": "^1.3.8",
-    "@web3modal/ethereum": "^2.7.0",
-    "@web3modal/html": "^2.7.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/html": "^2.7.1",
     "components": "*",
     "ethers": "^5.7.2",
     "firebase": "^10.1.0",
     "icons": "*",
-    "ionicons": "^7.1.0",
-    "node-stdlib-browser": "^1.2.0",
-    "omit-deep": "^0.3.0",
+    "ionicons": "7.1.0",
     "pinia": "^2.0.33",
     "send-intent": "^5.0.0",
     "shared": "*",
-    "threads-api": "^1.6.3",
-    "turbo": "^1.8.0",
+    "viem": "^1.5.3",
     "vue": "^3.2.47",
     "vue-cup-avatar": "^0.1.9",
     "vue-router": "^4.1.6"
@@ -53,7 +50,6 @@
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.0.0",
     "@types/jest": "^29.5.0",
-    "@types/omit-deep": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
@@ -74,6 +70,7 @@
   "disabedDeps": {
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-node-stdlib-browser": "^0.2.1",
-    "vite-plugin-windicss": "^1.8.10"
+    "vite-plugin-windicss": "^1.8.10",
+    "node-stdlib-browser": "^1.2.0"
   }
 }
