--- a/apps/yup-live-mobile/android/capacitor.settings.gradle
+++ b/apps/yup-live-mobile/android/capacitor.settings.gradle
@@ -8,6 +8,9 @@ project(':capacitor-firebase-messaging').projectDir = new File('../../../node_mo
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../../../node_modules/@capacitor/app/android')
 
+include ':capacitor-device'
+project(':capacitor-device').projectDir = new File('../../../node_modules/@capacitor/device/android')
+
 include ':capacitor-haptics'
 project(':capacitor-haptics').projectDir = new File('../../../node_modules/@capacitor/haptics/android')
 
