--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -66,7 +66,7 @@
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.1",
+    "typescript": "~5.1.3",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27",
     "yarn-upgrade-all": "^0.7.2"
