--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/node": "^18.19.6",
+    "@types/video.js": "^7.3.56",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-basic-ssl": "^1.0.2",
