changes: at https://yup-live.pages.dev/change-log

--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -32,8 +32,9 @@
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^7.6.4",
     "@ionic/vue-router": "^7.6.4",
-    "@wagmi/core": "^1.4.13",
-    "@web3modal/wagmi": "^3.5.6",
+    "@wagmi/connectors": "^4.1.18",
+    "@wagmi/core": "^2.6.9",
+    "@web3modal/wagmi": "^4.1.1",
     "@yupio/contract-addresses": "^1.0.15",
     "components": "*",
     "ethers": "^6.10.0",
@@ -43,7 +44,7 @@
     "pinia": "^2.1.7",
     "send-intent": "^5.0.0",
     "shared": "*",
-    "viem": "^1.21.4",
+    "viem": "^2.8.18",
     "vue": "^3.4.12",
     "vue-cup-avatar": "^0.1.9",
     "vue-router": "^4.2.5"
