--- a/apps/yup-live/package.json
+++ b/apps/yup-live/package.json
@@ -27,8 +27,9 @@
     "@noble/hashes": "^1.3.0",
     "@oruga-ui/oruga-next": "^0.7.0",
     "@vueuse/head": "^2.0.0",
-    "@wagmi/core": "^1.4.13",
-    "@web3modal/wagmi": "^3.5.6",
+    "@wagmi/connectors": "^4.1.18",
+    "@wagmi/core": "^2.6.9",
+    "@web3modal/wagmi": "^4.1.1",
     "@yupio/contract-addresses": "^1.0.15",
     "canonicalize": "^1.0.8",
     "components": "*",
@@ -40,7 +41,7 @@
     "qrcode.vue": "^3.4.0",
     "shared": "*",
     "text-clipper": "^2.2.0",
-    "viem": "^1.21.4",
+    "viem": "^2.8.18",
     "vue": "^3.4.12",
     "vue-cup-avatar": "^0.1.9",
     "vue-router": "^4.2.5"
