--- a/apps/yup-live-desktop/package.json
+++ b/apps/yup-live-desktop/package.json
@@ -15,8 +15,7 @@
     "@tauri-apps/api": "^1.3.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.3.0",
-    "yarn-upgrade-all": "^0.7.2"
+    "@tauri-apps/cli": "^1.3.0"
   },
   "main": "index.js",
   "license": "MIT"
