--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -14,8 +14,7 @@
     "android-res": "cordova-res android --skip-config --copy",
     "android-ver": "deno run -A ./scripts/update-version.ts",
     "android-pub": "deno run -A ./scripts/publish-preview.ts",
-    "android-res-new": "npx capacitor-assets generate --android",
-    "upgrade": "yarn-upgrade-all"
+    "android-res-new": "npx capacitor-assets generate --android"
   },
   "dependencies": {
     "@capacitor-firebase/messaging": "^5.3.0",
@@ -69,8 +68,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.1.3",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27",
-    "yarn-upgrade-all": "^0.7.2"
+    "vue-tsc": "^1.8.27"
   },
   "browser": {
     "stream": false
