chore: add script to check endpoints before build

--- a/apps/yup-live-mobile/package.json
+++ b/apps/yup-live-mobile/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts,.vue --ignore-path .gitignore --fix src&&prettier . -w -u",
     "build": "vue-tsc --noEmit && vite build",
     "android": "ionic cap run android -l --external --host=4875.flashsoft.eu --port=4875 --livereload-url=https://4875.flashsoft.eu",
-    "android-build": "yarn build && ionic capacitor sync android --prod --no-build",
+    "check-endpoints": "bun run ./scripts/check-build-endpoints.ts",
+    "android-build": "yarn check-endpoints && yarn build && ionic capacitor sync android --prod --no-build",
     "android-open": "ionic capacitor open android",
     "android-res": "cordova-res android --skip-config --copy",
     "android-ver": "deno run -A ./scripts/update-version.ts",
